...
            return
        }

        view?.updateProfile(
            name: profile.name,
            login: profile.loginName,
            bio: profile.bio ?? "Нет описания"
        )
    }

    private func updateAvatar() {
        guard let avatarString = ProfileImageService.shared.avatarURL,
              let url = URL(string: avatarString) else {
...
